--- a/style/style.css
+++ b/style/style.css
@@ -1,66 +1,111 @@
+html {
+  height: 100vh;
+}
+
 body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
-.background img {
+.images .background #background-desktop {
+  display: none;
+}
+.images .background #background-phone {
   width: 100%;
   height: 300px;
 }
-
-.card-back {
+.images .card-back {
   position: absolute;
   top: 40px;
   right: 15px;
   display: flex;
   justify-content: end;
 }
-.card-back img {
+.images .card-back img {
   min-height: 200px;
   height: 70%;
-  min-width: 200px;
+  min-width: 310px;
   width: 80%;
 }
-
-.card-front {
+.images .card-back #passwordCard {
+  position: absolute;
+  top: 92px;
+  right: 50px;
+  color: hsl(0, 0%, 100%);
+  font-size: 14px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+}
+.images .card-front {
   position: absolute;
   top: 152px;
   right: 15px;
   margin-left: 15px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
 }
-.card-front .card {
+.images .card-front .card {
   min-height: 200px;
   height: 90%;
-  min-width: 200px;
+  min-width: 310px;
   width: 80%;
 }
-.card-front .logo-card {
+.images .card-front .logo-card {
   position: absolute;
   top: 20px;
   left: 20px;
   height: 35px;
 }
+.images .card-front #numberCard {
+  position: absolute;
+  top: 110px;
+  left: 20px;
+  font-size: 25px;
+  font-weight: normal;
+  color: hsl(0, 0%, 100%);
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.images .card-front #nameCard {
+  position: absolute;
+  top: 160px;
+  left: 20px;
+  text-transform: uppercase;
+  color: hsl(0, 0%, 100%);
+  font-size: 12px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+}
+.images .card-front #dateCard {
+  position: absolute;
+  top: 160px;
+  left: 250px;
+  color: hsl(0, 0%, 100%);
+  font-size: 12px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+}
 
 .texts {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-top: 100px;
+  margin: 0 auto;
+  height: 100%;
 }
 .texts .box-inputs {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 60%;
   max-width: 300px;
+  margin-top: 100px;
 }
 .texts .box-inputs label {
   margin-bottom: 5px;
-}
-.texts .box-inputs input {
-  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 10px;
+  letter-spacing: 2px;
+  color: hsl(278, 68%, 11%);
 }
 .texts .box-inputs div {
   display: flex;
@@ -78,4 +123,119 @@ body {
 }
 .texts .box-inputs .month-year #month {
   margin-right: 5px;
+}
+.texts .box-inputs .box-button button {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  background-color: hsl(278, 68%, 11%);
+  color: hsl(0, 0%, 100%);
+}
+.texts input {
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  color: hsl(278, 68%, 11%);
+  font-weight: normal;
+  border: 1px solid hsl(270, 3%, 87%);
+  font-family: "Space Grotesk", sans-serif;
+}
+.texts input::-moz-placeholder {
+  color: hsl(270, 3%, 87%);
+}
+.texts input::placeholder {
+  color: hsl(270, 3%, 87%);
+}
+.texts input:hover,
+.texts input:active {
+  padding: 0.5rem;
+  border: double 3px transparent;
+  border-radius: 6px;
+  background-image: linear-gradient(white, white), linear-gradient(to right, rgb(100, 72, 254), rgb(96, 5, 148));
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+}
+.texts input:invalid {
+  outline: 1px solid hsl(0, 100%, 66%);
+}
+
+@media (min-width: 1000px) {
+  body {
+    flex-direction: row;
+    height: 100vh;
+  }
+  .images {
+    margin-right: 350px;
+  }
+  .images .background #background-desktop {
+    display: flex;
+    height: 100vh;
+    width: 500px;
+  }
+  .images .background #background-phone {
+    display: none;
+  }
+  .images .card-back {
+    position: absolute;
+    top: 400px;
+    right: unset;
+    left: 270px;
+  }
+  .images .card-back img {
+    height: 245px;
+    width: 447px;
+  }
+  .images .card-back #passwordCard {
+    top: 115px;
+  }
+  .images .card-front {
+    position: absolute;
+    top: 130px;
+    right: unset;
+    left: 150px;
+  }
+  .images .card-front .card {
+    height: 245px;
+    width: 447px;
+  }
+  .images .card-front .logo-card {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    height: 35px;
+  }
+  .images .card-front #numberCard {
+    position: absolute;
+    top: 130px;
+    left: 25px;
+    font-size: 25px;
+    font-weight: normal;
+    color: hsl(0, 0%, 100%);
+    width: -moz-fit-content;
+    width: fit-content;
+    letter-spacing: 6px;
+  }
+  .images .card-front #nameCard {
+    position: absolute;
+    top: 200px;
+    left: 25px;
+    text-transform: uppercase;
+    color: hsl(0, 0%, 100%);
+    font-size: 12px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+  }
+  .images .card-front #dateCard {
+    position: absolute;
+    top: 200px;
+    left: 380px;
+    color: hsl(0, 0%, 100%);
+    font-size: 12px;
+    font-weight: lighter;
+    letter-spacing: 1px;
+  }
+  .texts .box-inputs {
+    min-width: 300px;
+  }
 }/*# sourceMappingURL=style.css.map */
