--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,3 @@
-html {
-  height: 100vh;
-}
-
 body {
   display: flex;
   flex-direction: column;
@@ -163,15 +159,16 @@ body {
 @media (min-width: 1000px) {
   body {
     flex-direction: row;
-    height: 100vh;
+    align-items: center;
   }
   .images {
-    margin-right: 350px;
+    margin-right: 100px;
   }
   .images .background #background-desktop {
     display: flex;
-    height: 100vh;
-    width: 500px;
+    height: -moz-max-content;
+    height: max-content;
+    width: 110%;
   }
   .images .background #background-phone {
     display: none;
@@ -179,8 +176,8 @@ body {
   .images .card-back {
     position: absolute;
     top: 400px;
-    right: unset;
-    left: 270px;
+    right: 50%;
+    left: 5%;
   }
   .images .card-back img {
     height: 245px;
@@ -192,8 +189,8 @@ body {
   .images .card-front {
     position: absolute;
     top: 130px;
-    right: unset;
-    left: 150px;
+    right: 45%;
+    left: 10%;
   }
   .images .card-front .card {
     height: 245px;
@@ -235,7 +232,11 @@ body {
     font-weight: lighter;
     letter-spacing: 1px;
   }
+  .texts {
+    height: 100%;
+  }
   .texts .box-inputs {
-    min-width: 300px;
+    max-width: 400px;
+    margin: 0;
   }
 }/*# sourceMappingURL=style.css.map */
