--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,3 @@
-html {
-    height: 100vh;
-}
-
 body {
     display: flex;
     flex-direction: column;
@@ -193,16 +189,17 @@ body {
 @media (min-width: 1000px) {
     body {
         flex-direction: row;
-        height: 100vh;
+        align-items: center;
+      
     }
 
     .images {
-        margin-right: 350px;
+        margin-right: 100px;
         .background {
             #background-desktop {
                 display: flex;
-                height: 100vh;
-                width: 500px;
+                height: max-content;
+                width: 110%;
             }
 
             #background-phone {
@@ -214,8 +211,8 @@ body {
         .card-back {
             position: absolute;
             top: 400px;
-            right: unset;
-            left: 270px;
+            right: 50%;
+            left: 5%;
 
             img {
                 height: 245px;
@@ -229,8 +226,8 @@ body {
         .card-front {
             position: absolute;
             top: 130px;
-            right: unset;
-            left: 150px;
+            right:45%;
+            left: 10%;
 
             .card {
                 height: 245px;
@@ -279,8 +276,10 @@ body {
     }
 
     .texts {
+        height: 100%;
         .box-inputs {
-            min-width: 300px;
+            max-width: 400px;
+            margin: 0;
         }
     }
 }
