--- a/style/style.css
+++ b/style/style.css
@@ -120,13 +120,38 @@ body {
 .texts .box-inputs .month-year #month {
   margin-right: 5px;
 }
-.texts .box-inputs .box-button button {
+.texts .box-button #continue, .texts .box-button #confirm {
   width: 100%;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
   background-color: hsl(278, 68%, 11%);
   color: hsl(0, 0%, 100%);
+}
+.texts #completed {
+  flex-direction: column;
+  text-align: center;
+  margin-top: 100px;
+  padding: 0 0 40px;
+}
+.texts #completed img {
+  align-self: center;
+  height: 80px;
+  width: 80px;
+  margin-bottom: 40px;
+}
+.texts #completed h2 {
+  font-size: 25px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  color: hsl(278, 68%, 11%);
+}
+.texts #completed p {
+  color: hsl(279, 6%, 55%);
+  font-weight: 500;
+  margin-bottom: 20px;
 }
 .texts input {
   margin-bottom: 20px;
@@ -143,7 +168,9 @@ body {
 .texts input::placeholder {
   color: hsl(270, 3%, 87%);
 }
-.texts input:hover,
+.texts input:not(.unfilled):focus:invalid {
+  border: 1px solid hsl(0, 100%, 66%);
+}
 .texts input:active {
   padding: 0.5rem;
   border: double 3px transparent;
@@ -152,14 +179,28 @@ body {
   background-origin: border-box;
   background-clip: padding-box, border-box;
 }
-.texts input:invalid {
-  outline: 1px solid hsl(0, 100%, 66%);
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 @media (min-width: 1000px) {
   body {
     flex-direction: row;
-    align-items: center;
   }
   .images {
     margin-right: 100px;
@@ -234,9 +275,13 @@ body {
   }
   .texts {
     height: 100%;
+    padding-top: 20%;
   }
   .texts .box-inputs {
     max-width: 400px;
+    margin: 0;
+  }
+  .texts #completed {
     margin: 0;
   }
 }/*# sourceMappingURL=style.css.map */
