--- a/style/style.scss
+++ b/style/style.scss
@@ -29,7 +29,8 @@ body {
             min-width: 310px;
             width: 80%;
         }
-        #passwordCard{
+
+        #passwordCard {
             position: absolute;
             top: 92px;
             right: 50px;
@@ -70,8 +71,8 @@ body {
             font-weight: normal;
             color: hsl(0, 0%, 100%);
             width: fit-content;
-           
-           
+
+
         }
 
         #nameCard {
@@ -142,16 +143,49 @@ body {
             }
         }
 
-        .box-button {
-            button {
-                width: 100%;
-                padding: 10px;
-                margin-bottom: 20px;
-                border-radius: 5px;
-                background-color: hsl(278, 68%, 11%);
-                color: hsl(0, 0%, 100%);
-            }
+    }
+
+    .box-button {
+        #continue, #confirm {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            background-color: hsl(278, 68%, 11%);
+            color: hsl(0, 0%, 100%);
         }
+    }
+
+    #completed {
+        flex-direction: column;
+        
+        text-align: center;
+        margin-top: 100px;
+        padding: 0 0 40px;
+
+        img {
+            align-self: center;
+            height: 80px;
+            width: 80px;
+            margin-bottom: 40px;
+        }
+
+        h2 {
+            font-size: 25px;
+            font-weight: 500;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin-bottom: 20px;
+            color: hsl(278, 68%, 11%);
+        }
+
+        p {
+            color: hsl(279, 6%, 55%);
+            font-weight: 500;
+            margin-bottom: 20px;
+        }
+
+
     }
 
     input {
@@ -168,7 +202,10 @@ body {
         color: hsl(270, 3%, 87%);
     }
 
-    input:hover,
+    input:not(.unfilled):focus:invalid{
+        border: 1px solid hsl(0, 100%, 66%);
+    }
+
     input:active {
         padding: 0.5rem;
         border: double 3px transparent;
@@ -178,10 +215,25 @@ body {
         background-origin: border-box;
         background-clip: padding-box, border-box;
     }
+}
 
-    input:invalid {
-        outline: 1px solid hsl(0, 100%, 66%);
+.attribution {
+    font-size: 11px;
+    text-align: center;
+
+    a {
+        color: hsl(228, 45%, 44%);
     }
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
 }
 
 //desktop
@@ -189,12 +241,12 @@ body {
 @media (min-width: 1000px) {
     body {
         flex-direction: row;
-        align-items: center;
-      
+
     }
 
     .images {
         margin-right: 100px;
+
         .background {
             #background-desktop {
                 display: flex;
@@ -218,7 +270,8 @@ body {
                 height: 245px;
                 width: 447px;
             }
-            #passwordCard{
+
+            #passwordCard {
                 top: 115px;
             }
         }
@@ -226,7 +279,7 @@ body {
         .card-front {
             position: absolute;
             top: 130px;
-            right:45%;
+            right: 45%;
             left: 10%;
 
             .card {
@@ -240,6 +293,7 @@ body {
                 left: 20px;
                 height: 35px;
             }
+
             #numberCard {
                 position: absolute;
                 top: 130px;
@@ -249,9 +303,9 @@ body {
                 color: hsl(0, 0%, 100%);
                 width: fit-content;
                 letter-spacing: 6px;
-               
+
             }
-    
+
             #nameCard {
                 position: absolute;
                 top: 200px;
@@ -262,7 +316,7 @@ body {
                 font-weight: lighter;
                 letter-spacing: 1px;
             }
-    
+
             #dateCard {
                 position: absolute;
                 top: 200px;
@@ -277,8 +331,14 @@ body {
 
     .texts {
         height: 100%;
+        padding-top: 20%;
+
         .box-inputs {
             max-width: 400px;
+            margin: 0;
+        }
+
+        #completed {
             margin: 0;
         }
     }
