--- a/style/style.css
+++ b/style/style.css
@@ -93,17 +93,18 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 auto;
   max-width: 300px;
   margin-top: 100px;
 }
 .texts .box-inputs label {
-  margin-bottom: 5px;
+  margin: 15px 0 5px 0;
   text-transform: uppercase;
   font-size: 10px;
   letter-spacing: 2px;
   color: hsl(278, 68%, 11%);
 }
-.texts .box-inputs div {
+.texts .box-inputs .flex-date-cvc {
   display: flex;
   justify-content: space-between;
   align-items: start;
@@ -114,16 +115,23 @@ body {
 .texts .box-inputs .block input {
   width: 50px;
 }
-.texts .box-inputs .month-year {
+.texts .box-inputs .box-date {
+  display: flex;
+  flex-direction: column;
+}
+.texts .box-inputs .box-date .month-year {
   justify-content: start;
 }
-.texts .box-inputs .month-year #month {
+.texts .box-inputs .box-date .month-year #monthInput {
   margin-right: 5px;
+}
+.texts .box-inputs #monthInput, .texts .box-inputs #yearInput, .texts .box-inputs #passwordInput {
+  margin-top: 5px;
 }
 .texts .box-button #continue, .texts .box-button #confirm {
   width: 100%;
   padding: 10px;
-  margin-bottom: 20px;
+  margin: 20px 0;
   border-radius: 5px;
   background-color: hsl(278, 68%, 11%);
   color: hsl(0, 0%, 100%);
@@ -154,7 +162,7 @@ body {
   margin-bottom: 20px;
 }
 .texts input {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   padding: 10px;
   border-radius: 5px;
   color: hsl(278, 68%, 11%);
@@ -183,9 +191,17 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin-bottom: 20px;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+.error {
+  color: hsl(0, 100%, 66%);
+  font-size: 10px;
+  font-weight: lighter;
+  margin-bottom: 10px;
 }
 
 input[type=number]::-webkit-outer-spin-button,
