--- a/style/style.scss
+++ b/style/style.scss
@@ -110,21 +110,23 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin: 0 auto;
         max-width: 300px;
         margin-top: 100px;
 
         label {
-            margin-bottom: 5px;
+            margin: 15px 0 5px 0;
             text-transform: uppercase;
             font-size: 10px;
             letter-spacing: 2px;
             color: hsl(278, 68%, 11%);
         }
 
-        div {
+        .flex-date-cvc {
             display: flex;
             justify-content: space-between;
             align-items: start;
+            
         }
 
         .block {
@@ -134,22 +136,29 @@ body {
                 width: 50px;
             }
         }
+        .box-date{
+            display: flex;
+            flex-direction: column;
 
-        .month-year {
-            justify-content: start;
-
-            #month {
-                margin-right: 5px;
+            .month-year {
+                justify-content: start;
+    
+                #monthInput {
+                    margin-right: 5px;
+                }
             }
         }
-
+       
+        #monthInput, #yearInput, #passwordInput{
+            margin-top: 5px;
+        }
     }
 
     .box-button {
         #continue, #confirm {
             width: 100%;
             padding: 10px;
-            margin-bottom: 20px;
+            margin: 20px 0;
             border-radius: 5px;
             background-color: hsl(278, 68%, 11%);
             color: hsl(0, 0%, 100%);
@@ -189,7 +198,7 @@ body {
     }
 
     input {
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         padding: 10px;
         border-radius: 5px;
         color: hsl(278, 68%, 11%);
@@ -220,10 +229,17 @@ body {
 .attribution {
     font-size: 11px;
     text-align: center;
-
+    margin-bottom: 20px;
     a {
         color: hsl(228, 45%, 44%);
     }
+}
+
+.error{
+    color:hsl(0, 100%, 66%);
+    font-size: 10px;
+    font-weight: lighter;
+    margin-bottom: 10px;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
